@@ -222,8 +222,16 @@ Use
 instead of default or configured interface. It is also possible to merge the
 information of two or more interfaces using the
 .I interface1+interface2+...
-syntax.  All provided interfaces must be unique and must exist in the database
-when the merge syntax is used.
+syntax. All provided interfaces must be unique and must exist in the database
+when the merge syntax is used. Optionally,
+.I interface
+can be replaced with
+.I alias
+previously set using
+.BR "vnstat --setalias" .
+Merge syntax isn't supported when
+.I alias
+is used.
 
 .TP
 .B "-L, --large"
