@@ -781,11 +781,14 @@ void showoneinterface(PARAMS *p)
 {
 	if (!db_getinterfacecountbyname(p->interface)) {
 		if (strchr(p->interface, '+') == NULL) {
-			printf("Error: Interface \"%s\" not found in database.\n", p->interface);
+			if (!db_setinterfacebyalias(p->interface, p->interface)) {
+				printf("Error: Interface or alias \"%s\" not found in database.\n", p->interface);
+				exit(EXIT_FAILURE);
+			}
 		} else {
 			printf("Error: Not all requested interfaces found in database or given interfaces aren't unique.\n");
+			exit(EXIT_FAILURE);
 		}
-		exit(EXIT_FAILURE);
 	}
 
 	if (cfg.qmode == 5) {
